# smap_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  semantic_mapping.repos
.github/workflows/: main.yml
Documentation/: Documentation.md
SemMap/: Sem_Map.smp
classification_wrapper/: classification_wrapper.py
classifier_importer/: classification_node_template.py  classifier_importer.py
classifier_importer_TOREMOVE/: classifier_importer.py
config/: Debug.perspective  classifiers_config.yaml  sample.rviz  simultation_config.yaml  slam_world.rviz  world.rviz
include/semantic_mapping/: concept.hpp  conceptual_map.hpp  detector.hpp  geometry_msg_serialization.hpp  label_writers.hpp  macros.hpp  thing.hpp  topological_map.hpp  visibility_control.h
include/smap/: macros.hpp  thing.hpp  topological_map.hpp  visibility_control.h
include/smap_core/: aux_functions.hpp  count_time.hpp  interface_templates.hpp  label_writers.hpp  macros.hpp  object_estimator.hpp  object_pose_estimator.hpp  parameter_tuning.hpp  perception_server.hpp  stacking_classification.hpp  test_component.hpp  thing.hpp  topo_map.hpp  topological_map.hpp  visibility_control.h
include/smap_core/components/: object_pose_estimator.hpp  perception_server.hpp
launch/: classification_bringup_launch.py  gz_rv_slam_launch.py  importer_example_launch.py  launch_gz_rv_cartog.py  launch_gz_rv_slam.py  object_estimator_node_launch.py  py_node_launch.py  robot_nav2_launch.py  smap_launch.py  smap_node_launch.py  smap_node_tuning_launch.py  smap_rviz_launch.py
map_exporter/: CMakeLists.txt  map_exporter.cpp  package.xml
map_exporter/include/map_exporter/: macros.hpp  map_exporter.hpp
maps/g_smap/: .gitignore  bottle.pgm  bottle.yaml  og_map.pgm  og_map.yaml  tv.pgm  tv.yaml
msg/: SmapData.msg
object_estimator/: CMakeLists.txt  object_estimator.cpp  object_estimator.hpp  object_estimator_node.cpp  object_estimator_tuning_node.cpp  package.xml  parameter_tuning.hpp
object_estimator/include/object_estimator/: imgui_vars.hpp  macros.hpp  object_estimator.hpp
pch/: CMakeLists.txt  log  pch.hpp
pcl_processing/: CMakeLists.txt  package.xml  pcl_processing.cpp
pcl_processing/include/: depth_map.hpp
pcl_processing/include/pcl_processing/: depth_map.hpp  pcl_processing.hpp
perception_server/: CMakeLists.txt  detector_descriptor.hpp  package.xml  perception_server.cpp  perception_server.hpp
perception_server/include/perception_server/: perception_server.hpp
rviz/: smap.rviz
scripts/: import_classifiers.py
smap_base/: CMakeLists.txt  CMakeLists_.txt  package.xml
smap_base/include/smap_base/: aux_functions.hpp  counters.hpp  detector_descriptor.hpp  graph.hpp  macros.hpp  stacking_classification.hpp  visibility_control.h
smap_base/src/: aux_functions.cpp
smap_node/: CMakeLists.txt  package.xml  smap_node.cpp  smap_node_headless.cpp
src/: class_combile.py  classification_component_node.py  classification_node.py  classification_node_template.py  concept.cpp  conceptual_map.cpp  detector.cpp  object_estimator.cpp  object_pose_estimator.cpp  perception_server.cpp  perception_server_node.py  semantic_mapping_node.cpp  smap_node.cpp  smap_node_headless.cpp  temp.cpp  test_component.cpp  thing.cpp  topo_map.cpp  topological_map.cpp
src/classification_wrapper/: classification_wrapper.py
src/classification_wrapper/classifiers/: classifier_1.py  classifier_2.py  example_classifier.py
src/classifiers/: classifier_1.py  classifier_2.py  py_node.py
src/components/: object_pose_estimator.cpp  perception_server.cpp
src/object_estimator/: CMakeLists.txt  object_estimator.cpp  object_estimator.hpp  package.xml
src/object_estimator/include/: depth_map.hpp  object_estimator.hpp  occlusion_map.hpp
src/pcl_processing/: CMakeLists.txt  package.xml  pcl_processing.cpp
src/pcl_processing/include/: pcl_processing.hpp
src/perception_server/: CMakeLists.txt  perception_server.cpp  perception_server.hpp
src/thing/: CMakeLists.txt  observation_histogram.cpp  observation_histogram.hpp  thing.cpp  thing.hpp
src/topo_map/: CMakeLists.txt  graph.hpp  label_writers.hpp  topo_map.cpp  topo_map.hpp  topo_marker.cpp  topo_marker.hpp
thing/: CMakeLists.txt  observation_histogram.cpp  package.xml  thing.cpp
thing/include/thing/: macros.hpp  observation_histogram.hpp  thing.hpp
topo_map/: CMakeLists.txt  label_writers.hpp  package.xml  topo_map.cpp  topo_map.hpp  topo_marker.cpp  topo_marker.hpp
topo_map/include/topo_map/: label_writers.hpp  macros.hpp  topo_map.hpp  topo_marker.hpp
topo_map_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  topo_map  topo_map.cpp
